--- a/src/views/PAT-035/administrador.hbs
+++ b/src/views/PAT-035/administrador.hbs
@@ -159,7 +159,7 @@
                                     <span>My Account</span>
                                 </a>                        
                                 <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item">
+                                <a href="/logout" class="dropdown-item">
                                     <i class="mdi mdi-logout me-1"></i>
                                     <span>Cerrar Sesión</span>
                                 </a>
