Cerrar-Sesion-addHotelAdmin

--- a/src/views/PAT-035/addHotelAdmin.hbs
+++ b/src/views/PAT-035/addHotelAdmin.hbs
@@ -182,7 +182,7 @@
                                 </a>
 
                                 <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item">
+                                <a href="/logout" class="dropdown-item">
                                     <i class="mdi mdi-logout me-1"></i>
                                     <span>Logout</span>
                                 </a>
