--- a/src/views/PAT-035/empleados.hbs
+++ b/src/views/PAT-035/empleados.hbs
@@ -102,46 +102,33 @@
           </li>
 
           <li class="dropdown">
-            <a
-              class="nav-link dropdown-toggle arrow-none nav-user px-2"
-              data-bs-toggle="dropdown"
-              href="#"
-              role="button"
-              aria-haspopup="false"
-              aria-expanded="false"
-            >
-              <span class="account-user-avatar">
-                <img
-                  src=" /images/users/{{user.id}}.jpg"
-                  alt="user-image"
-                  width="32"
-                  class="rounded-circle"
-                />
-              </span>
-              <span class="d-lg-flex flex-column gap-1 d-none">
-                <h5 class="my-0">{{hotel.nombre}}</h5>
-                <h6 class="my-0 fw-normal">Administrador</h6>
-              </span>
+            <a class="nav-link dropdown-toggle arrow-none nav-user px-2" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
+                <span class="account-user-avatar">
+                    <img src=" /images/users/{{user.id}}.jpg" alt="user-image" width="32" class="rounded-circle">
+                </span>
+                <span class="d-lg-flex flex-column gap-1 d-none">
+                    <h5 class="my-0">{{hotel.nombre}}</h5>
+                    <h6 class="my-0 fw-normal">Administrador</h6>
+                </span>
             </a>
-            <div
-              class="dropdown-menu dropdown-menu-end dropdown-menu-animated profile-dropdown"
-            >
-              <!-- item-->
-              <div class="dropdown-header noti-title">
-                <h6 class="text-overflow m-0">Bienvenido !</h6>
-              </div>
+            <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated profile-dropdown">
+                <!-- item-->
+                <div class=" dropdown-header noti-title">
+                    <h6 class="text-overflow m-0">Bienvenido !</h6>
+                </div>
 
-              <!-- item-->
-              <a href="/PAT-035/profile" class="dropdown-item">
-                <i class="mdi mdi-account-circle me-1"></i>
-                <span>Mi Perfil</span>
-              </a>
+                <!-- item-->
+                <a href = "/PAT-035/profile" class="dropdown-item">
+                    <i class="mdi mdi-account-circle me-1"></i>
+                    <span>Mi Perfil</span>
+                </a>
 
-              <!-- item-->
-              <a href="/logout" class="dropdown-item">
-                <i class="mdi mdi-logout me-1"></i>
-                <span>Cerrar Sesión</span>
-              </a>
+
+                <!-- item-->
+                <a href="/logout" class="dropdown-item">
+                    <i class="mdi mdi-logout me-1"></i>
+                    <span>Cerrar Sesión</span>
+                </a>
             </div>
           </li>
         </ul>
@@ -342,20 +329,7 @@
           <div class="card">
             <div class="row">
               <div class="col-12">
-                <button class="btn btn-primary rounded-pill" data-bs-toggle="modal" data-bs-target="#Pregunta45"><i class="uil-comment-alt-message"></i> Enviar Mensaje</button>
-               
-                <form action="/enviar" method="POST">
-                  <button class="btn btn-primary rounded-pill" type="submit"><i class="uil-comment-alt-message"></i> Enviar Mensaje</button>
-                  {{#each links}}
-                  <tr>
-                    <td>
-                      <input class="collapse" type="text" id="numero" name="numero" required value="{{telefono}}">
-                      <input class="collapse" type="text" id="mensaje" name="mensaje" required value="{{link}}">
-                    </td>
-                  </tr>
-                  
-                  {{/each}}
-                </form>
+                <button class="btn btn-primary rounded-pill" data-bs-toggle="modal" data-bs-target="#Mensajes"><i class="uil-comment-alt-message"></i> Enviar Mensaje</button>
               </div>
             </div>
           </div>
@@ -656,9 +630,9 @@
         </div>
       </div>
     </div>
-    <div class="offcanvas-body p-0">
+      <div class="offcanvas-body p-0">
 
-    </div>
+      </div>
   </div>
   <!-- Zoom -->
   <!-- END wrapper -->
@@ -828,57 +802,56 @@
   </form>
 
 
-  
-          <div class="modal fade" id="Pregunta45" tabindex="-1" aria-labelledby="CreateProjectLabel" aria-hidden="true" >
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                 
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                 <div class="card-body pt-2">
-                  <div class="table-responsive" style="overflow-x: auto; ">
-                    <table class="table table-centered table-nowrap mb-0">
-                      <thead>
-                        <tr>
-                          <th scope="col">link</th>
-                          <th scope="col">Telefono</th>
-                        
-                          <th scope="col" class="text-end">Accion</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        {{#each links}}
-                       
-                          <tr>
-                            <td>
-                              {{link}}
-                            </td>
-                            <td >{{telefono}}</td>
-                            
-                            
-
-                            <td class="text-end">
-                              
-                              <a
-                                href="/PAT-035/deleteEmpleado/{{idEmpleado}}"
-                                class="font-18  "
-                                data-bs-toggle="tooltip"
-                                data-bs-placement="top"
-                                title="Enviar Mensaje"
-                              ><i class="uil-comment-alt-message"></i></a>
-                            </td>
-                          </tr>
-                          <!-- end tr -->
-                        {{/each}}
+  <!--Mensajes-->
+  <div class="modal fade" id="Mensajes" tabindex="-1" aria-labelledby="CreateProjectLabel" aria-hidden="true" >
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="card-body pt-2" style="">
+          <div class="table-responsive" style="overflow-x: auto;">
+            <table class="table table-sm table-centered table-nowrap mb-0 table-striped">
+              <thead>
+                <tr>
+                  <th scope="col">Nombre</th>
+                  <th scope="col">link</th>
+                  <th scope="col">Telefono</th>
                 
-              
-               
-              </div>
-            </div>
+                  <th scope="col" class="text-end">Accion</th>
+                </tr>
+              </thead>
+              <tbody>
+                {{#each links}}
+                  <form action="/enviar" method="POST">
+                    <tr>
+                      <td>
+                        <input class="form-control-plaintext" type="text" readonly id="nombre" name="nombre" required value="{{nombre}}">
+                      </td>
+                      <td>
+                        <input class="form-control-plaintext collapse" type="text" readonly id="mensaje" name="mensaje" required value="Se le invita a contestar la siguiente encuesta a usted {{nombre}} trabajador de {{nombreHotel}}, para contestarla acceda al siguiente link: {{link}}">
+                        <input class="form-control-plaintext" type="text" readonly id="link" name="link" required value="{{link}}">
+                      </td>
+                      <td>
+                        <input class="form-control-plaintext" type="text" readonly id="numero" name="numero" required value="{{telefono}}">
+                      </td>
+                      <td>
+                        <button class="btn btn-primary rounded-pill" type="submit"><i class="uil-comment-alt-message"></i></button>
+                      </td>
+                    </tr>
+                    
+                  </form>
+                  
+                  <!-- end tr -->
+                {{/each}}
+              </tbody>
+            </table>
           </div>
-       
-
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--Mensajes-->     
   <!-- Theme Settings -->
   <div
     class="offcanvas offcanvas-end"
@@ -2003,36 +1976,7 @@
       </div>
     </div>
   </div>
-  <!-- Mensaje de whatsApp -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"></script>
-	
-  <script type='text/javascript'>
-      
-    $(document).ready(function() {
-      var token="GA230504003105";
-      var api ="https://script.google.com/macros/s/AKfycbyoBhxuklU5D3LTguTcYAS85klwFINHxxd-FroauC4CmFVvS0ua/exec";
-        
-      $("#btn_notificar").click(function() {
-        var  payload = {"op": "registermessage","token_qr": token, "mensajes": (
-                {"numero": "5213221712894","mensaje": "pruebas desde javascript Documento es *Todo jala bien*"})};
-        $.ajax({
-          url: api,
-          jsonp: "callback",
-          method: 'POST',
-          data : JSON.stringify(payload),
-          async: false,
-          success: function(respuestaSolicitud) {
-              alert(respuestaSolicitud.message);
-          }
-        });
-      });
-    });	
-
-  </script>
   
-  <!-- Mensaje de whatsApp -->
-
   <!-- Vendor js -->
   <script src="/js/vendor.min.js"></script>
 
