--- a/src/views/PAT-035/home.hbs
+++ b/src/views/PAT-035/home.hbs
@@ -12,21 +12,15 @@
                         <div class="logo-topbar">
                             <!-- Logo light -->
                             <a href="/PAT-035/home" class="logo-light">
-                                <span class="logo-lg">
-                                    <img src="" alt="logo">
-                                </span>
-                                <span class="logo-sm">
-                                    <img src="" alt="small logo">
+                                <span class="">
+                                    <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
                                 </span>
                             </a>
 
                             <!-- Logo Dark -->
                             <a href="/PAT-035/home" class="logo-dark">
-                                <span class="logo-lg">
-                                    <img src="" alt="dark logo">
-                                </span>
-                                <span class="logo-sm">
-                                    <img src="" alt="small logo">
+                                <span class="">
+                                    <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
                                 </span>
                             </a>
                         </div>
@@ -115,24 +109,17 @@
 
                 <!-- Brand Logo Light -->
                 <a href="/PAT-035/home" class="logo logo-light">
-                    <span class="logo-lg">
-                        <img src="" alt="logo">
-                    </span>
-                    <span class="logo-sm">
-                        <img src="" alt="small logo">
+                    <span class="">
+                        <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
                     </span>
                 </a>
 
                 <!-- Brand Logo Dark -->
                 <a href="/PAT-035/home" class="logo logo-dark">
-                    <span class="logo-lg">
-                        <img src="" alt="dark logo">
-                    </span>
-                    <span class="logo-sm">
-                        <img src="" alt="small logo">
+                    <span class="">
+                        <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
                     </span>
                 </a>
-
                 <!-- Sidebar Hover Menu Toggle Button -->
                 <div class="button-sm-hover" data-bs-toggle="tooltip" data-bs-placement="right" title="Show Full Sidebar">
                     <i class="ri-checkbox-blank-circle-line align-middle"></i>
@@ -232,7 +219,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <h4 class="page-title">Tablero de Estadísticas</h4>
+                                    <h4 class="page-title">TABLERO DE ESTADÍSTICAS</h4>
                                 </div>
                             </div>
                         </div>
@@ -245,7 +232,7 @@
                                         <div class="card widget-flat">
                                             <div class="card-body">
                                                 
-                                                <h5 class="text-muted fw-normal mt-0" title="Number of Customers">Resultado General</h5>
+                                                <h5 class="text-muted fw-normal mt-0" title="Number of Customers">RESULTADO GENERAL</h5>
                                                 <h3  style="background-color: {{colorGen}}; padding: 10px; color: white; text-align: center;">Riesgo {{estadogen}}</h3>
 
                                                 <p class="mb-0 text-muted">
@@ -514,6 +501,21 @@
                 <!-- content -->
 
                 <!-- Footer Start -->
+                <footer class="footer">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <script>document.write(new Date().getFullYear())</script> © PAT035 - 35Coderthemes.com
+                            </div>
+                            <div class="col-md-6">
+                                <div class="text-md-end footer-links d-none d-md-block">
+                                    <a href="javascript: void(0);">Soporte</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+                <!-- end Footer -->
                 
 
             </div>
