--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
         <!-- App favicon -->
-        <link rel="shortcut icon" href="/images/favicon.ico">
+        <link rel="shortcut icon" href="/images/AHMT-sm.ico">
 
         <!-- Daterangepicker css -->
         <link rel="stylesheet" href="/vendor/daterangepicker/daterangepicker.css">
