--- a/src/views/PAT-035/empleados.hbs
+++ b/src/views/PAT-035/empleados.hbs
@@ -11,22 +11,16 @@
           <div class="logo-topbar">
             <!-- Logo light -->
             <a href="/PAT-035/home" class="logo-light">
-              <span class="logo-lg">
-                <img src="" alt="logo" />
-              </span>
-              <span class="logo-sm">
-                <img src="" alt="small logo" />
-              </span>
+                <span class="">
+                    <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
+                </span>
             </a>
 
             <!-- Logo Dark -->
             <a href="/PAT-035/home" class="logo-dark">
-              <span class="logo-lg">
-                <img src="" alt="dark logo" />
-              </span>
-              <span class="logo-sm">
-                <img src="" alt="small logo" />
-              </span>
+                <span class="">
+                    <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
+                </span>
             </a>
           </div>
 
@@ -141,22 +135,16 @@
 
       <!-- Brand Logo Light -->
       <a href="/PAT-035/home" class="logo logo-light">
-        <span class="logo-lg">
-          <img src="" alt="logo" />
-        </span>
-        <span class="logo-sm">
-          <img src="" alt="small logo" />
-        </span>
+          <span class="">
+              <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
+          </span>
       </a>
 
       <!-- Brand Logo Dark -->
       <a href="/PAT-035/home" class="logo logo-dark">
-        <span class="logo-lg">
-          <img src="" alt="dark logo" />
-        </span>
-        <span class="logo-sm">
-          <img src="" alt="small logo" />
-        </span>
+          <span class="">
+              <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
+          </span>
       </a>
 
       <!-- Sidebar Hover Menu Toggle Button -->
@@ -263,7 +251,7 @@
 
                   </ol>
                 </div>
-                <h4 class="page-title">Encuestas Y Empleados</h4>
+                <h4 class="page-title">ENCUESTAS Y EMPLEADOS</h4>
               </div>
             </div>
           </div>
@@ -502,7 +490,7 @@
                           <th scope="col">Telefono</th>
                           <th scope="col">Correo</th>
                           <th scope="col">Puesto</th>
-                          <th scope="col" class="text-end">Accion</th>
+                          <th scope="col" class="text-end">Acción</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -535,14 +523,14 @@
                               <a
                                 href="/PAT-035/editEmpleado/{{idEmpleado}}"
                                 class="font-18 text-info me-2"
-                                title="Edit"
+                                title="Editar"
                               ><i class="uil uil-pen"></i></a>
                               <a
                                 href="/PAT-035/deleteEmpleado/{{idEmpleado}}"
                                 class="font-18 text-danger"
                                 data-bs-toggle="tooltip"
                                 data-bs-placement="top"
-                                title="Delete"
+                                title="Eliminar"
                               ><i class="uil uil-trash"></i></a>
                             </td>
                           </tr>
@@ -568,23 +556,7 @@
       </div>
       <!-- content -->
 
-      <!-- Footer Start -->
-      <footer class="footer">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-6">
-              <script>document.write(new Date().getFullYear())</script>
-              © PAT035 - 35Coderthemes.com
-            </div>
-            <div class="col-md-6">
-              <div class="text-md-end footer-links d-none d-md-block">
-                <a href="javascript: void(0);">Soporte</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </footer>
-      <!-- end Footer -->
+       
 
     </div>
 
