--- a/src/views/PAT-035/estadisticasGlobales.hbs
+++ b/src/views/PAT-035/estadisticasGlobales.hbs
@@ -12,21 +12,15 @@
                         <div class="logo-topbar">
                             <!-- Logo light -->
                             <a href="/PAT-035/home" class="logo-light">
-                                <span class="logo-lg">
-                                    <img src=" /images/AHMT.png" alt="medium logo">
-                                </span>
-                                <span class="logo-sm">
-                                    <img src="" alt="small logo">
+                                <span class="">
+                                    <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
                                 </span>
                             </a>
 
                             <!-- Logo Dark -->
                             <a href="/PAT-035/home" class="logo-dark">
-                                <span class="logo-lg">
-                                    <img src=" /images/AHMT.png" alt="dark logo">
-                                </span>
-                                <span class="logo-sm">
-                                    <img src="" alt="small logo">
+                                <span class="">
+                                    <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
                                 </span>
                             </a>
                         </div>
@@ -114,21 +108,15 @@
 
                 <!-- Brand Logo Light -->
                 <a href="/PAT-035/home" class="logo logo-light">
-                    <span class="logo-lg">
-                        <img src=" /images/AHMT.png" alt="logo">
-                    </span>
-                    <span class="logo-sm">
-                        <img src="" alt="small logo">
+                    <span class="">
+                        <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
                     </span>
                 </a>
 
                 <!-- Brand Logo Dark -->
                 <a href="/PAT-035/home" class="logo logo-dark">
-                    <span class="logo-lg">
-                        <img src=" /images/AHMT.png" alt="dark logo">
-                    </span>
-                    <span class="logo-sm">
-                        <img src="" alt="small logo">
+                    <span class="">
+                        <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
                     </span>
                 </a>
 
@@ -218,7 +206,7 @@
                     
                         <div class="row border-top p-2 text-center">
                             <div class="col-lg-8.8">                   
-                                <h6 class="header-title fs-3">Categoria del Hotel</h6>
+                                <h6 class="header-title fs-4">CATEGORIA DEL HOTEL</h6>
                                 <nav aria-label="Page navigation example">
                                     <ul class="pagination justify-content-center">
                                         <li class="page-item">
