--- a/src/views/PAT-035/profile.hbs
+++ b/src/views/PAT-035/profile.hbs
@@ -2,7 +2,6 @@
         <!-- Begin page -->
         <div class="wrapper">
 
-            
             <!-- ========== Topbar Start ========== -->
             <div class="navbar-custom">
                 <div class="topbar container-fluid">
@@ -12,21 +11,15 @@
                         <div class="logo-topbar">
                             <!-- Logo light -->
                             <a href="/PAT-035/home" class="logo-light">
-                                <span class="logo-lg">
-                                    <img src="" alt="logo">
-                                </span>
-                                <span class="logo-sm">
-                                    <img src="" alt="small logo">
+                                <span class="">
+                                    <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
                                 </span>
                             </a>
 
                             <!-- Logo Dark -->
                             <a href="/PAT-035/home" class="logo-dark">
-                                <span class="logo-lg">
-                                    <img src="" alt="dark logo">
-                                </span>
-                                <span class="logo-sm">
-                                    <img src="" alt="small logo">
+                                <span class="">
+                                    <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
                                 </span>
                             </a>
                         </div>
@@ -115,21 +108,15 @@
 
                 <!-- Brand Logo Light -->
                 <a href="/PAT-035/home" class="logo logo-light">
-                    <span class="logo-lg">
-                        <img src="" alt="logo">
-                    </span>
-                    <span class="logo-sm">
-                        <img src="" alt="small logo">
+                    <span class="">
+                        <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
                     </span>
                 </a>
 
                 <!-- Brand Logo Dark -->
                 <a href="/PAT-035/home" class="logo logo-dark">
-                    <span class="logo-lg">
-                        <img src="" alt="dark logo">
-                    </span>
-                    <span class="logo-sm">
-                        <img src="" alt="small logo">
+                    <span class="">
+                        <img src=" /images/AHMT-sm.png" alt="small logo" height="80">
                     </span>
                 </a>
 
@@ -222,7 +209,7 @@
                                     <div class="page-title-right">
                                        
                                     </div>
-                                    <h4 class="page-title">Profile</h4>
+                                    <h4 class="page-title">PERFIL</h4>
                                 </div>
                             </div>
                         </div>
@@ -262,7 +249,7 @@
                                             <div class="col-sm-4">
                                                 <div class="text-center mt-sm-0 mt-3 text-sm-end">
                                                     <a href="/PAT-035/editProfile" type="button" class="btn btn-light">
-                                                        <i class="mdi mdi-account-edit me-1"></i> Edit Profile
+                                                        <i class="mdi mdi-account-edit me-1"></i> Editar Perfil
                                                     </a>
                                                 </div>
                                             </div> <!-- end col-->
@@ -280,7 +267,7 @@
                                 <!-- Personal-Information -->
                                 <div class="card">
                                     <div class="card-body">
-                                        <h4 class="header-title mt-0 mb-3">Informacion</h4>
+                                        <h4 class="header-title mt-0 mb-3">Información</h4>
                                         <p class="text-muted font-13">
                                             {{hotel.descripcion}}
                                         </p>
@@ -352,26 +339,35 @@
         <div class="offcanvas offcanvas-end" tabindex="-1" id="Zoom">
             <div class="d-flex align-items-center bg-primary p-3 offcanvas-header">
                 <h5 class="text-white m-0">Hacer Zoom</h5>
-                <button type="button" class="btn-close btn-close-white ms-auto" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                <button
+                    type="button"
+                    class="btn-close btn-close-white ms-auto"
+                    data-bs-dismiss="offcanvas"
+                    aria-label="Close"
+                ></button>
             </div>
 
             <div class="offcanvas-footer border-top p-3 text-center">
                 <div class="row">
                     <div class="col-3">
-                        <button type="button" class="btn btn-light w-100" id="reset-layout">
-                            <i class="ri-zoom-out-line font-20"></i>
-                        </button>
+                    <button type="button" class="btn btn-light w-100" id="reset-layout-2" onclick="updateZoomLevel()">
+                        <i class="ri-zoom-out-line font-20"></i>
+                    </button>
                     </div>
                     <div class="progress-w-percent col-6">
-                        <span class="fw-bold">100%</span>
-                        <div class="progress progress-sm">
-                            <div class="progress-bar" role="progressbar" style="width: 65%;" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
+                                    <span class="fw-bold" id="zoom-level">100%</span>
+                                    <div class="progress progress-sm">
+                                        <div class="progress-bar" role="progressbar" 
+                                        style="width: 0%;" 
+                                        aria-valuenow="0" 
+                                        aria-valuemin="0" 
+                                        aria-valuemax="100"></div>
+                                    </div>
+                                </div>
                     <div class="col-3">
-                        <button type="button" class="btn btn-light w-100" id="reset-layout">
-                            <i class="ri-zoom-in-line font-20"></i>
-                        </button>
+                    <button type="button" class="btn btn-light w-100" id="reset-layout" onclick="updateZoomLevel()">
+                        <i class="ri-zoom-in-line font-20"></i>
+                    </button>
                     </div>
                 </div>
             </div>
@@ -1028,49 +1024,77 @@
         <!-- App js -->
         <script src="/js/app.min.js"></script>
 
+        <script>
+                        // Obtener los elementos de la página que se deben redimensionar
+                        var pageElements = document.querySelectorAll("body, h1, h2, h3, h4, h5, h6, p, a, button, form, input, select, textarea, .form-group, .form-control,label");
+
+
+                        // Definir una variable para el nivel de zoom actual
+                        var currentZoom = 100;
+
+                        // Función para aumentar el nivel de zoom
+                        function zoomIn() {
+                        currentZoom += 10;
+                        for (var i = 0; i < pageElements.length; i++) {
+                            pageElements[i].style.fontSize = currentZoom + "%";
+                            console.log("me ejecuto +");
+                        }
+                        }
+
+                        // Función para reducir el nivel de zoom
+                        function zoomOut() {
+                        currentZoom -= 10;
+                        for (var i = 0; i < pageElements.length; i++) {
+                            pageElements[i].style.fontSize = currentZoom + "%";
+                            console.log("me ejecuto -");
+                        }
+                        }
+                        // Función para actualizar el nivel de zoom actual
+                        function updateZoomLevel() {
+                        const zoomLevel = currentZoom;
+                        document.getElementById("zoom-level").innerText = `${zoomLevel}%`;
+                        // Obtener el valor actual del zoom
+                        var zoomValue = document.getElementById("zoom-level").innerText.replace("%", "");
+                        // Actualizar la barra de progreso con el valor del zoom
+                        document.querySelector(".progress-bar").style.width = zoomValue + "%";
+
+                        }
+
+
+                        // Obtener los botones de zoom y agregarles un listener para ejecutar las funciones correspondientes
+                        document.getElementById("reset-layout").addEventListener("click", zoomIn);
+                        document.getElementById("reset-layout-2").addEventListener("click", zoomOut);
+        </script>
+
+        <!-- Style de css para hacer zoom -->
+        <style>
+                #zoom-controls {
+                  position: fixed;
+                  top: 10px;
+                  right: 10px;
+                  z-index: 9999;
+                  display: flex;
+                  flex-direction: column;
+                  align-items: center;
+                  gap: 10px;
+                  background-color: #f1f1f1;
+                  padding: 10px;
+                  border-radius: 5px;
+                }
+
+                #zoom-controls button {
+                  background-color: #4CAF50;
+                  color: white;
+                  padding: 10px;
+                  border: none;
+                  border-radius: 5px;
+                  cursor: pointer;
+                }
+
+                #zoom-level {
+                  font-weight: bold;
+                  font-size: 1.2em;
+                }
+      </style>
+      
     </body>
-
-<!-- 
-     Topbar Brand Logo
-                        <div class="logo-topbar">
-                             Logo light 
-                            <a href="/PAT-035/home" class="logo-light">
-                                <span class="logo-lg">
-                                    <img src=" /images/logo.png" alt="logo">
-                                </span>
-                                <span class="logo-sm">
-                                    <img src=" /images/logo-sm.png" alt="small logo">
-                                </span>
-                            </a>
-
-                             Logo Dark 
-                            <a href="/PAT-035/home" class="logo-dark">
-                                <span class="logo-lg">
-                                    <img src=" /images/logo-dark.png" alt="dark logo">
-                                </span>
-                                <span class="logo-sm">
-                                    <img src=" /images/logo-dark-sm.png" alt="small logo">
-                                </span>
-                            </a>
-                        </div>
-
-                         Brand Logo Light 
-                <a href="/PAT-035/home" class="logo logo-light">
-                    <span class="logo-lg">
-                        <img src=" /images/logo.png" alt="logo">
-                    </span>
-                    <span class="logo-sm">
-                        <img src=" /images/logo-sm.png" alt="small logo">
-                    </span>
-                </a>
-
-                <! Brand Logo Dark 
-                <a href="/PAT-035/home" class="logo logo-dark">
-                    <span class="logo-lg">
-                        <img src=" /images/logo-dark.png" alt="dark logo">
-                    </span>
-                    <span class="logo-sm">
-                        <img src=" /images/logo-dark-sm.png" alt="small logo">
-                    </span>
-                </a>
--->
