--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -8,7 +8,7 @@
                             <!-- Logo -->
                             <div class="card-header py-4 text-center bg-primary">
                                 <a>
-                                    <span><img src="" alt="logo" height="22"></span>
+                                    <span><img src=" /images/AHMT.png" alt="logo" height="200"></span>
                                 </a>
                             </div>
 
@@ -71,12 +71,3 @@
         <script src="/js/app.min.js"></script>
 
     </body>
-
-<!--
-     Logo 
-                            <div class="card-header py-4 text-center bg-primary">
-                                <a>
-                                    span><img src="/images/logo.png" alt="logo" height="22"></span><
-                                </a>
-                            </div>
-                            -->    
