--- a/src/views/PAT-035/editEmpleado.hbs
+++ b/src/views/PAT-035/editEmpleado.hbs
@@ -223,20 +223,21 @@
                 <!-- Footer Start -->
                 <footer class="footer">
                     <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-6">
-                        <script>document.write(new Date().getFullYear())</script>
-                        © PAT035 - 35Coderthemes.com
+                        <div class="row">
+                            <div class="col-md-6">
+                                <script>document.write(new Date().getFullYear())</script> © PAT035 - 35Coderthemes.com
+                            </div>
+                            <div class="col-md-6">
+                                <div class="text-md-end footer-links d-none d-md-block">
+                                    <div class="btn-group" role="group" aria-label="Basic example">
+                                        <a href="/PAT-035/Soporte-SesionIniciada-Principal-A" class="link">Soporte</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-md-6">
-                        <div class="text-md-end footer-links d-none d-md-block">
-                            <a href="javascript: void(0);">Soporte</a>
-                        </div>
-                        </div>
-                    </div>
                     </div>
                 </footer>
-                <!-- end Footer --> 
+                <!-- end Footer -->
             </div><!-- content -->
 
             <!-- ============================================================== -->
