--- a/src/views/PAT-035/editProfile.hbs
+++ b/src/views/PAT-035/editProfile.hbs
@@ -227,7 +227,9 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="text-md-end footer-links d-none d-md-block">
-                                    <a href="javascript: void(0);">Soporte</a>
+                                    <div class="btn-group" role="group" aria-label="Basic example">
+                                        <a href="/PAT-035/Soporte-SesionIniciada-Principal-A" class="link">Soporte</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
