--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -62,8 +62,18 @@
         <!-- end page -->
 
         <footer class="footer footer-alt">
-            2018 - <script>document.write(new Date().getFullYear())</script> © PAT035 - 35Coderthemes.com
+              <div class="row">
+                  <div class="col-md-10">
+                      <script>document.write(new Date().getFullYear())</script> © PAT035 - 35Coderthemes.com
+                  </div>
+                  <div class="col-md-2">
+                      <div class="text-md-end footer-links d-none d-md-block">
+                            <a href="/PAT-035/Soporte-IniciarSesion-Principal" class="link">Soporte</a>
+                      </div>
+                  </div>
+              </div>
         </footer>
+
         <!-- Vendor js -->
         <script src="/js/vendor.min.js"></script>
         
