--- a/src/views/Encuesta/NoPermitida.hbs
+++ b/src/views/Encuesta/NoPermitida.hbs
@@ -9,30 +9,27 @@
                             <!-- Logo -->
                             <div class="card-header py-4 text-center bg-primary">
                                 <a href="index.html">
-                                    <span><img src="images/logo.png" alt="logo" height="22"></span>
+                                    <span><img src="/images/AHMT-lg.png" alt="logo" height="22"></span>
                                 </a>
                             </div>
 
                             <div class="card-body p-4">
                                 
                                 <div class="text-center w-75 m-auto">
-                                    <h4 class="text-dark-50 text-center mt-0 fw-bold">Hasta la proxima encuesta !!</h4>
-                                    <p class="text-muted mb-4">Su respuesta ya se encuentra registrada.</p>
+                                    <h4 class="text-dark-50 text-center mt-0 fw-bold">Aún no cumple con el tiempo minimo para realizar la encuesta !!</h4>
+                                    <p class="text-muted mb-4">Cuando se cumpla el tiempo minimo podra realizarla.</p>
                                 </div>
 
                                 <div class="logout-icon m-auto">
                                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                     viewBox="0 0 161.2 161.2" enable-background="new 0 0 161.2 161.2" xml:space="preserve">
-                                        <path class="path" fill="none" stroke="#0acf97" stroke-miterlimit="10" d="M425.9,52.1L425.9,52.1c-2.2-2.6-6-2.6-8.3-0.1l-42.7,46.2l-14.3-16.4
-                                            c-2.3-2.7-6.2-2.7-8.6-0.1c-1.9,2.1-2,5.6-0.1,7.7l17.6,20.3c0.2,0.3,0.4,0.6,0.6,0.9c1.8,2,4.4,2.5,6.6,1.4c0.7-0.3,1.4-0.8,2-1.5
-                                            c0.3-0.3,0.5-0.6,0.7-0.9l46.3-50.1C427.7,57.5,427.7,54.2,425.9,52.1z"/>
-                                        <circle class="path" fill="none" stroke="#0acf97" stroke-width="4" stroke-miterlimit="10" cx="80.6" cy="80.6" r="62.1"/>
-                                        <polyline class="path" fill="none" stroke="#0acf97" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" points="113,52.8
-                                            74.1,108.4 48.2,86.4 "/>
-
-                                        <circle class="spin" fill="none" stroke="#0acf97" stroke-width="4" stroke-miterlimit="10" stroke-dasharray="12.2175,12.2175" cx="80.6" cy="80.6" r="73.9"/>
+                                        <circle class="path" fill="none" stroke="#f44336" stroke-width="8" stroke-miterlimit="10" cx="80.6" cy="80.6" r="62.1"/>
+                                        <line class="path" fill="none" stroke="#f44336" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" x1="80.6" y1="47.5" x2="80.6" y2="95.5"/>
+                                        <line class="path" fill="none" stroke="#f44336" stroke-width="8" stroke-linecap="round" stroke-miterlimit="10" x1="80.6" y1="105.5" x2="80.6" y2="117.5"/>
                                     </svg>
-                                </div> <!-- end logout-icon-->
+                                </div>
+
+ <!-- end logout-icon-->
 
                             </div> <!-- end card-body-->
                         </div> <!-- end card-->
