--- a/src/views/Encuesta/NoPermitida.hbs
+++ b/src/views/Encuesta/NoPermitida.hbs
@@ -8,9 +8,7 @@
 
                             <!-- Logo -->
                             <div class="card-header py-4 text-center bg-primary">
-                                <a href="index.html">
-                                    <span><img src="/images/AHMT-lg.png" alt="logo" height="22"></span>
-                                </a>
+                                <span><img src=" /images/AHMT.png" alt="logo" height="200"></span>
                             </div>
 
                             <div class="card-body p-4">
@@ -29,7 +27,7 @@
                                     </svg>
                                 </div>
 
- <!-- end logout-icon-->
+                                <!-- end logout-icon-->
 
                             </div> <!-- end card-body-->
                         </div> <!-- end card-->
@@ -50,7 +48,16 @@
         <!-- end page -->
 
         <footer class="footer footer-alt">
-            2018 - <script>document.write(new Date().getFullYear())</script> © Hyper - Coderthemes.com
+              <div class="row">
+                  <div class="col-md-10">
+                      <script>document.write(new Date().getFullYear())</script> © PAT035 - 35Coderthemes.com
+                  </div>
+                  <div class="col-md-2">
+                      <div class="text-md-end footer-links d-none d-md-block">
+                            <a href="" class="link">Soporte</a>
+                      </div>
+                  </div>
+              </div>
         </footer>
         <!-- Vendor js -->
         <script src="/js/vendor.min.js"></script>
