--- a/src/views/PAT-035/LandingPage.hbs
+++ b/src/views/PAT-035/LandingPage.hbs
@@ -5,7 +5,7 @@
 
                 <!-- logo -->
                 <a href="index.html" class="navbar-brand me-lg-5">
-                    <img src="assets/images/logo.png" alt="logo" class="logo-dark" height="22" />
+                    <img src="images/logo.png" alt="logo" class="logo-dark" height="22" />
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -43,8 +43,9 @@
                         <li class="nav-item me-0">
                             <a href="https://themes.getbootstrap.com/product/hyper-responsive-admin-dashboard-template/" target="_blank" class="nav-link d-lg-none">Purchase now</a>
                             <a href="https://themes.getbootstrap.com/product/hyper-responsive-admin-dashboard-template/" target="_blank" class="btn btn-sm btn-light rounded-pill d-none d-lg-inline-flex">
-                                <i class="mdi mdi-basket me-2"></i> INGRESAR
+                            <i class="mdi mdi-login me-2"></i> INGRESAR
                             </a>
+
                         </li>
                     </ul>
 
@@ -78,7 +79,7 @@
                     </div>
                     <div class="col-md-5 offset-md-2">
                         <div class="text-md-end mt-3 mt-md-0">
-                            <img src="assets/images/svg/startup.svg" alt="" class="img-fluid" />
+                            <img src="images/svg/startup.svg" alt="" class="img-fluid" />
                         </div>
                     </div>
                 </div>
